--- a/PROJEKT/inputs/PLC_t3.in
+++ b/PROJEKT/inputs/PLC_t3.in
@@ -7,11 +7,18 @@ if (true) {
 	write "if";
 }
 
-int a;
+int a,b;
 
 while(a<10) {
  write "a=",a;
- a=3+1;
+ a=a+1;
 }
 
-a=10;
+a=0;
+
+read b;
+
+while(a<b) {
+ write "a=",a,", b=",b;
+ a=a+1;
+}
