--- a/PROJEKT/inputs/PLC_t1.in
+++ b/PROJEKT/inputs/PLC_t1.in
@@ -26,7 +26,7 @@ write "<Expressions>";
 write "2+3*5(17): ",2+3*5;
 write "17 / 3(5): ", 17 / 3;
 write "17 % 3(2): ", 17 % 3;
-//write "2.5*2.5/6.25(1.0): ", 2.5*2.5/6.25;
+write "2.5*2.5/6.25(1.0): ", 2.5*2.5/6.25;
 write "1.5*3(4.5): ", 1.5*3;
 write "abc+def (abcdef): ", "abc"."def";
 write "";
@@ -39,7 +39,10 @@ float y;
 y = 10;
 write "y (10.0): ", y;
 
-
+write "<Multiple Assignments>";
+int i,j,k;
+i=j=k=55;
+write "i=j=k=55: ",i,"=",j,"=",k;
 
 write "<Input - a(int),b(float),c(string),d(bool)>";
 int a;
@@ -52,7 +55,3 @@ c = "";
 e = true;
 read a,b,c,e;
 write "a,b,c,e: ", a, ",", b, ",", c, ",",e;
-
-
-
-bool x = 1.1515;
