--- a/PROJEKT/inputs/PLC_t2.in
+++ b/PROJEKT/inputs/PLC_t2.in
@@ -9,4 +9,4 @@ write "<Logic operators>";
 write "false and true (false):", false && true;
 write "false or true (true):", false || true;
 write "not 1==2 (true):", !(1==2);
-//write "true or false and true (true):", true || false && true;
+write "true or false and true (true):", true || false && true;
