--- a/PROJEKT/inputs/PLC_t3.in
+++ b/PROJEKT/inputs/PLC_t3.in
@@ -1,3 +1,6 @@
+if (3<4) write "condition was true";
+else write "condition was false";
+
 if (true) {
 	write "inside";
 	write "second";
@@ -10,6 +13,7 @@ while(a<10) {
  write "a=",a;
  a=a+1;
 }
+
 a=0;
 
 read b;
